update args syntax

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,10 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          build-args: DEBEZIUM_VERSION=${{ env.DEBEZIUM_VERSION }},STRIMZI_VERSION=${{ env.STRIMZI_VERSION }},KAFKA_VERSION=${{ env.KAFKA_VERSION }}
+          build-args: |
+            DEBEZIUM_VERSION=${{ env.DEBEZIUM_VERSION }}
+            STRIMZI_VERSION=${{ env.STRIMZI_VERSION }}
+            KAFKA_VERSION=${{ env.KAFKA_VERSION }}
           context: postgres
           file: postgres/Dockerfile
           tags: ${{ secrets.REGISTRY_SERVER }}/${{ secrets.REGISTRY_NAMESPACE }}/${{ env.image_name }}:${{ env.DEBEZIUM_VERSION }}
@@ -56,7 +59,10 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          build-args: DEBEZIUM_VERSION=${{ env.DEBEZIUM_VERSION }},STRIMZI_VERSION=${{ env.STRIMZI_VERSION }},KAFKA_VERSION=${{ env.KAFKA_VERSION }}
+          build-args: |
+            DEBEZIUM_VERSION=${{ env.DEBEZIUM_VERSION }}
+            STRIMZI_VERSION=${{ env.STRIMZI_VERSION }}
+            KAFKA_VERSION=${{ env.KAFKA_VERSION }}
           context: mongodb
           file: mongodb/Dockerfile
           tags: ${{ secrets.REGISTRY_SERVER }}/${{ secrets.REGISTRY_NAMESPACE }}/${{ env.image_name }}:${{ env.DEBEZIUM_VERSION }}
@@ -84,7 +90,10 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          build-args: DEBEZIUM_VERSION=${{ env.DEBEZIUM_VERSION }},STRIMZI_VERSION=${{ env.STRIMZI_VERSION }},KAFKA_VERSION=${{ env.KAFKA_VERSION }}
+          build-args: |
+            DEBEZIUM_VERSION=${{ env.DEBEZIUM_VERSION }}
+            STRIMZI_VERSION=${{ env.STRIMZI_VERSION }}
+            KAFKA_VERSION=${{ env.KAFKA_VERSION }}
           context: mysql
           file: mysql/Dockerfile
           tags: ${{ secrets.REGISTRY_SERVER }}/${{ secrets.REGISTRY_NAMESPACE }}/${{ env.image_name }}:${{ env.DEBEZIUM_VERSION }}
