--- a/.github/workflows/test-nightly.yml
+++ b/.github/workflows/test-nightly.yml
@@ -16,11 +16,11 @@ env:
 
 jobs:
   test-postgres:
-    name: Test Postgres Debezium container image build ${{ env.DEBEZIUM_VERSION }} Strimzi ${{ env.STRIMZI_VERSION }} Kafka ${{ env.KAFKA_VERSION }}
+    name: Test Postgres Debezium container image build
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - name: Test
+      - name: Test Postgres Debezium container image build ${{ env.DEBEZIUM_VERSION }} using Strimzi ${{ env.STRIMZI_VERSION }}, Kafka ${{ env.KAFKA_VERSION }}
         uses: docker/build-push-action@v2
         with:
           push: false
@@ -33,11 +33,11 @@ jobs:
           file: Dockerfile
 
   test-mongodb:
-    name: Test Mongo DB Debezium container image build ${{ inputs.DEBEZIUM_VERSION }} Strimzi ${{ env.STRIMZI_VERSION }} Kafka ${{ env.KAFKA_VERSION }}
+    name: Test Mongo DB Debezium container image build
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - name: Test
+      - name: Test Mongo DB Debezium container image build ${{ env.DEBEZIUM_VERSION }} using Strimzi ${{ env.STRIMZI_VERSION }}, Kafka ${{ env.KAFKA_VERSION }}
         uses: docker/build-push-action@v2
         with:
           push: false
@@ -50,11 +50,11 @@ jobs:
           file: Dockerfile
 
   test-mysql:
-    name: Test MySQL Debezium container image build ${{ inputs.DEBEZIUM_VERSION }} Strimzi ${{ env.STRIMZI_VERSION }} Kafka ${{ env.KAFKA_VERSION }}
+    name: Test MySQL Debezium container image build
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - name: Test
+      - name: Test MySQL Debezium container image build ${{ env.DEBEZIUM_VERSION }} using Strimzi ${{ env.STRIMZI_VERSION }}, Kafka ${{ env.KAFKA_VERSION }}
         uses: docker/build-push-action@v2
         with:
           push: false
@@ -68,11 +68,11 @@ jobs:
 
 
   test-sqlserver:
-    name: Test MySQL Debezium container image build ${{ inputs.DEBEZIUM_VERSION }} Strimzi ${{ env.STRIMZI_VERSION }} Kafka ${{ env.KAFKA_VERSION }}
+    name: Test SQL Server Debezium container image build
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - name: Test
+      - name: Test SQL Server Debezium container image build ${{ env.DEBEZIUM_VERSION }} using Strimzi ${{ env.STRIMZI_VERSION }}, Kafka ${{ env.KAFKA_VERSION }}
         uses: docker/build-push-action@v2
         with:
           push: false
