--- a/.github/workflows/test-nightly.yml
+++ b/.github/workflows/test-nightly.yml
@@ -10,9 +10,10 @@ on:
       - 'Dockerfile.*'
 
 env:
-  DEBEZIUM_VERSION: nightly
+  DEBEZIUM_VERSION_UPSTREAM: nightly
+  DEBEZIUM_VERSION_DOWNSTREAM: nightly
   STRIMZI_VERSION: latest
-  KAFKA_VERSION: 3.2.3
+  KAFKA_VERSION: 3.3.1
 
 jobs:
   test-postgres:
@@ -20,13 +21,20 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - name: Test Postgres Debezium container image build ${{ env.DEBEZIUM_VERSION }} using Strimzi ${{ env.STRIMZI_VERSION }}, Kafka ${{ env.KAFKA_VERSION }}
+      - name: Login to quay.io
+        uses: docker/login-action@v1
+        with:
+          registry: quay.io
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+      - name: Test Postgres Debezium container image build ${{ env.DEBEZIUM_VERSION_UPSTREAM }} ${{ env.DEBEZIUM_VERSION_DOWNSTREAM }} using Strimzi ${{ env.STRIMZI_VERSION }}, Kafka ${{ env.KAFKA_VERSION }}
         uses: docker/build-push-action@v2
         with:
           push: false
           build-args: |
             DEBEZIUM_CONNECTOR=postgres
-            DEBEZIUM_VERSION=${{ env.DEBEZIUM_VERSION }}
+            DEBEZIUM_VERSION_UPSTREAM=${{ env.DEBEZIUM_VERSION_UPSTREAM }}
+            DEBEZIUM_VERSION_DOWNSTREAM=${{ env.DEBEZIUM_VERSION_DOWNSTREAM }}
             STRIMZI_VERSION=${{ env.STRIMZI_VERSION }}
             KAFKA_VERSION=${{ env.KAFKA_VERSION }}
           context: .
@@ -37,13 +45,20 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - name: Test Mongo DB Debezium container image build ${{ env.DEBEZIUM_VERSION }} using Strimzi ${{ env.STRIMZI_VERSION }}, Kafka ${{ env.KAFKA_VERSION }}
+      - name: Login to quay.io
+        uses: docker/login-action@v1
+        with:
+          registry: quay.io
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+      - name: Test Mongo DB Debezium container image build ${{ env.DEBEZIUM_VERSION_UPSTREAM }} ${{ env.DEBEZIUM_VERSION_DOWNSTREAM }} using Strimzi ${{ env.STRIMZI_VERSION }}, Kafka ${{ env.KAFKA_VERSION }}
         uses: docker/build-push-action@v2
         with:
           push: false
           build-args: |
             DEBEZIUM_CONNECTOR=mongodb
-            DEBEZIUM_VERSION=${{ env.DEBEZIUM_VERSION }}
+            DEBEZIUM_VERSION_UPSTREAM=${{ inputs.DEBEZIUM_VERSION_UPSTREAM }}
+            DEBEZIUM_VERSION_DOWNSTREAM=${{ inputs.DEBEZIUM_VERSION_DOWNSTREAM }}
             STRIMZI_VERSION=${{ env.STRIMZI_VERSION }}
             KAFKA_VERSION=${{ env.KAFKA_VERSION }}
           context: .
@@ -54,31 +69,44 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - name: Test MySQL Debezium container image build ${{ env.DEBEZIUM_VERSION }} using Strimzi ${{ env.STRIMZI_VERSION }}, Kafka ${{ env.KAFKA_VERSION }}
+      - name: Login to quay.io
+        uses: docker/login-action@v1
+        with:
+          registry: quay.io
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+      - name: Test MySQL Debezium container image build ${{ env.DEBEZIUM_VERSION_UPSTREAM }} ${{ env.DEBEZIUM_VERSION_DOWNSTREAM }} using Strimzi ${{ env.STRIMZI_VERSION }}, Kafka ${{ env.KAFKA_VERSION }}
         uses: docker/build-push-action@v2
         with:
           push: false
           build-args: |
             DEBEZIUM_CONNECTOR=mysql
-            DEBEZIUM_VERSION=${{ env.DEBEZIUM_VERSION }}
+            DEBEZIUM_VERSION_UPSTREAM=${{ env.DEBEZIUM_VERSION_UPSTREAM }}
+            DEBEZIUM_VERSION_DOWNSTREAM=${{ env.DEBEZIUM_VERSION_DOWNSTREAM }}
             STRIMZI_VERSION=${{ env.STRIMZI_VERSION }}
             KAFKA_VERSION=${{ env.KAFKA_VERSION }}
           context: .
           file: Dockerfile
-
 
   test-sqlserver:
     name: Test SQL Server Debezium container image build
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - name: Test SQL Server Debezium container image build ${{ env.DEBEZIUM_VERSION }} using Strimzi ${{ env.STRIMZI_VERSION }}, Kafka ${{ env.KAFKA_VERSION }}
+      - name: Login to quay.io
+        uses: docker/login-action@v1
+        with:
+          registry: quay.io
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+      - name: Test SQL Server Debezium container image build ${{ env.DEBEZIUM_VERSION_UPSTREAM }} ${{ env.DEBEZIUM_VERSION_DOWNSTREAM }} using Strimzi ${{ env.STRIMZI_VERSION }}, Kafka ${{ env.KAFKA_VERSION }}
         uses: docker/build-push-action@v2
         with:
           push: false
           build-args: |
             DEBEZIUM_CONNECTOR=sqlserver
-            DEBEZIUM_VERSION=${{ env.DEBEZIUM_VERSION }}
+            DEBEZIUM_VERSION_UPSTREAM=${{ env.DEBEZIUM_VERSION_UPSTREAM }}
+            DEBEZIUM_VERSION_DOWNSTREAM=${{ env.DEBEZIUM_VERSION_DOWNSTREAM }}
             STRIMZI_VERSION=${{ env.STRIMZI_VERSION }}
             KAFKA_VERSION=${{ env.KAFKA_VERSION }}
           context: .
